--- a/index.css
+++ b/index.css
@@ -1,9 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap");
+.bg-gray {
+  background-color: #e9e9e9;
+}
+
 body {
   padding: 0;
   margin: 0;
 }
 
+.custom_nav {
+  margin-left: 51px;
+  margin-top: 33px;
+}
 .custom_nav .active {
   color: #1ca8c3;
 }
@@ -11,6 +20,43 @@ body {
   color: black;
   font-family: "Montserrat", sans-serif;
   font-size: 12px;
+  letter-spacing: 0.4px;
+}
+.custom_logo {
+  top: 38px;
+  position: absolute;
+  left: 147px;
+}
+.custom_header_content {
+  margin-left: 67px;
+  margin-top: 161px;
+  margin-bottom: 201px;
+}
+.custom_header_content h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 38px;
+  letter-spacing: -1px;
+}
+.custom_header_text {
+  font-family: "Nunito Sans", sans-serif;
+  color: #787878;
+  font-size: 18px;
+  margin-top: 25px;
+  margin-left: 5px;
+  letter-spacing: 0.1px;
+}
+.custom_header_text p {
+  margin: 0;
+}
+.custom_btn {
+  margin-top: 42px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  color: #fff;
+  border: 0px;
+  background-color: #10c9c3;
+  width: 180px;
+  height: 54px;
 }
 
 /*# sourceMappingURL=index.css.map */
