--- a/sass.sass
+++ b/sass.sass
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap') 
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap')
+
 .bg-gray
     background-color: #e9e9e9
 body
@@ -47,5 +48,22 @@ body
         background-color: #10c9c3
         width: 180px
         height: 54px
+    &_about
+        padding-top: 89px
+        padding-bottom: 100px
+        &_head
+            font-family: 'Montserrat', sans-serif
+            font-size: 30px
+            letter-spacing: -0.6px
+            padding-bottom: 18px
+        &_text
+            color: #787878
+            font-family: 'Nunito Sans', sans-serif
+            font-size: 16px
+            margin: 0
+            letter-spacing: 0.1px
+        &_signa
+            margin-top: 33px
+            
 
 
