finished styling skills block

--- a/sass.sass
+++ b/sass.sass
@@ -40,7 +40,8 @@ body
             p
                 margin: 0
     &_btn
-        margin-top: 42px
+        margin-top: 36px
+        margin-left: 5px
         font-family: 'Montserrat', sans-serif
         font-size: 12px
         color: #fff
@@ -64,6 +65,31 @@ body
             letter-spacing: 0.1px
         &_signa
             margin-top: 33px
+    &_skills
+        &_head
+            font-family: 'Montserrat', sans-serif
+            font-size: 30px
+            letter-spacing: -0.5px
+            padding-bottom: 22px
+        &_label
+            font-family: 'Montserrat', sans-serif
+            font-size: 12px
+            margin-bottom: 17px
+            letter-spacing: 0.8px
+        &_lside
+            padding-bottom: 164px
+            padding-top: 167px
+            padding-left: 147px
+            padding-right: 84px
+            background-color: #f8f9f9
+        &_rside
+            background-color: #e9e9e9
+        &_progress
+            height: 3px
+            margin-bottom: 39px
+            border-radius: 0
+            div
+                background-color: #10c9c3
             
 
 
