--- a/index.css
+++ b/index.css
@@ -49,7 +49,8 @@ body {
   margin: 0;
 }
 .custom_btn {
-  margin-top: 42px;
+  margin-top: 36px;
+  margin-left: 5px;
   font-family: "Montserrat", sans-serif;
   font-size: 12px;
   color: #fff;
@@ -77,6 +78,36 @@ body {
 }
 .custom_about_signa {
   margin-top: 33px;
+}
+.custom_skills_head {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  letter-spacing: -0.5px;
+  padding-bottom: 22px;
+}
+.custom_skills_label {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  margin-bottom: 17px;
+  letter-spacing: 0.8px;
+}
+.custom_skills_lside {
+  padding-bottom: 164px;
+  padding-top: 167px;
+  padding-left: 147px;
+  padding-right: 84px;
+  background-color: #f8f9f9;
+}
+.custom_skills_rside {
+  background-color: #e9e9e9;
+}
+.custom_skills_progress {
+  height: 3px;
+  margin-bottom: 39px;
+  border-radius: 0;
+}
+.custom_skills_progress div {
+  background-color: #10c9c3;
 }
 
 /*# sourceMappingURL=index.css.map */
