--- a/sass.sass
+++ b/sass.sass
@@ -90,6 +90,12 @@ body
             border-radius: 0
             div
                 background-color: #10c9c3
+    &_stats
+        padding: 100px 0px
+        background-color: #10c9c3
+        span
+            font-size: 48px
+            color: #fff
             
 
 
