--- a/sass.sass
+++ b/sass.sass
@@ -96,6 +96,18 @@ body
         span
             font-size: 48px
             color: #fff
+        &_block
+            font-family: 'Montserrat', sans-serif
+            color: #fff
+            div
+                margin-left: 22px
+                h6
+                    font-size: 18px
+                p
+                    font-size: 12px
+                    letter-spacing: 0.9px
+
+
             
 
 
