--- a/index.css
+++ b/index.css
@@ -131,5 +131,42 @@ body {
   font-size: 12px;
   letter-spacing: 0.9px;
 }
+.custom_photos div:first-child {
+  height: 300px;
+}
+.custom_photos div:first-child div:nth-child(even) {
+  background-color: #dddddd;
+}
+.custom_photos div:first-child div:nth-child(odd) {
+  background-color: #838383;
+}
+.custom_photos div:nth-child(2) {
+  height: 300px;
+}
+.custom_photos div:nth-child(2) div:nth-child(odd) {
+  background-color: #dddddd;
+}
+.custom_photos div:nth-child(2) div:last-child {
+  background-color: #838383;
+}
+.custom_photos div:nth-child(2) div:nth-child(2) {
+  background-color: black;
+  color: #fff;
+  font-size: 48px;
+}
+.custom_photos div:last-child {
+  height: 0px;
+  background-color: #f5f5f5;
+}
+.custom_photos div:last-child div {
+  padding-top: 46px;
+  padding-bottom: 45px;
+}
+.custom_photos div:last-child div a {
+  font-family: "Montserrat", sans-serif;
+  text-decoration: none;
+  font-size: 12px;
+  color: #8e8e8e;
+}
 
 /*# sourceMappingURL=index.css.map */
