--- a/sass.sass
+++ b/sass.sass
@@ -106,6 +106,38 @@ body
                 p
                     font-size: 12px
                     letter-spacing: 0.9px
+    &_photos
+        div:first-child
+            height: 300px
+            div:nth-child(even)
+                background-color: #dddddd
+            div:nth-child(odd)
+                background-color: #838383
+        div:nth-child(2)
+            height: 300px
+            div:nth-child(odd)
+                background-color: #dddddd
+            div:last-child
+                background-color: #838383
+            div:nth-child(2)
+                background-color: black
+                color: #fff
+                font-size: 48px
+        div:last-child
+            height: 0px
+            background-color: #f5f5f5
+            div
+                padding-top: 46px
+                padding-bottom: 45px
+                a
+                    font-family: 'Montserrat', sans-serif
+                    text-decoration: none
+                    font-size: 12px
+                    color: #8e8e8e
+
+
+
+
 
 
             
