finished styling process block

--- a/sass.sass
+++ b/sass.sass
@@ -134,10 +134,45 @@ body
                     text-decoration: none
                     font-size: 12px
                     color: #8e8e8e
-
-
-
-
+    &_process
+        &_content
+            padding-top: 101px
+            padding-bottom: 100px
+            h6
+                font-family: 'Montserrat', sans-serif
+                font-size: 30px
+                margin: 0
+                padding: 0
+                line-height: 0.6
+                margin-bottom: 44px
+            p
+                font-family: 'Nunito Sans', sans-serif
+                font-size: 16px
+                color: #787878
+                margin: 0
+                padding: 0
+                line-height: 0.6
+            p:first-child
+                padding-bottom: 16px
+        &_player
+            margin-top: 60px
+            width: 1170px
+            height: 571px
+            background-color: #e9e9e9
+            &_play
+                height: 85px
+                width: 85px
+                background-color: #10c9c3
+                border-radius: 50%
+            :hover
+                cursor: pointer
+            &_triangle
+                width: 0
+                height: 0
+                border-top: 8px solid transparent
+                border-bottom: 8px solid transparent
+                border-left: 11px solid white
+                
 
 
             
