--- a/index.css
+++ b/index.css
@@ -168,5 +168,50 @@ body {
   font-size: 12px;
   color: #8e8e8e;
 }
+.custom_process_content {
+  padding-top: 101px;
+  padding-bottom: 100px;
+}
+.custom_process_content h6 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  margin: 0;
+  padding: 0;
+  line-height: 0.6;
+  margin-bottom: 44px;
+}
+.custom_process_content p {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 16px;
+  color: #787878;
+  margin: 0;
+  padding: 0;
+  line-height: 0.6;
+}
+.custom_process_content p:first-child {
+  padding-bottom: 16px;
+}
+.custom_process_player {
+  margin-top: 60px;
+  width: 1170px;
+  height: 571px;
+  background-color: #e9e9e9;
+}
+.custom_process_player_play {
+  height: 85px;
+  width: 85px;
+  background-color: #10c9c3;
+  border-radius: 50%;
+}
+.custom_process_player :hover {
+  cursor: pointer;
+}
+.custom_process_player_triangle {
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-left: 11px solid white;
+}
 
 /*# sourceMappingURL=index.css.map */
