--- a/sass.sass
+++ b/sass.sass
@@ -172,7 +172,47 @@ body
                 border-top: 8px solid transparent
                 border-bottom: 8px solid transparent
                 border-left: 11px solid white
+    &_services
+        padding: 103px 0
+        margin: 0
+        background-color: #f5f5f5
+        height: 535px
+        .row:first-child
+            padding-bottom: 60px
+        &_card
+            display: flex
+            flex-direction: column
+            align-items: center
+            justify-content: center
+            h6
+                text-transform: uppercase
+                font-family: 'Montserrat', sans-serif
+                font-size: 12px
+                color: #191919
+                margin: 0
+                padding: 0
+                line-height: 0
+                margin-top: 31px
+            span
+                color: #656565
+                font-size: 48px
+            &_text
+                display: flex
+                flex-direction: column
+                align-items: center
+                justify-content: center
+                font-family: 'Nunito Sans', sans-serif
+                font-size: 16px
+                color: #787878
+                margin-top: 23px
+                p:first-child
+                    line-height: 24px
+                p
+                    margin: 0
+                    padding: 0
                 
+
+
 
 
             
