--- a/sass.sass
+++ b/sass.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap') 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap') 
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap')
 
 .bg-gray
@@ -210,6 +210,43 @@ body
                 p
                     margin: 0
                     padding: 0
+    &_quotes
+        padding-top: 182px
+        padding-bottom: 60px
+        background-color: #10c9c3
+        h3, h4
+            font-size: 24px
+            font-family: 'Montserrat', sans-serif
+            color: #fff
+        h4
+            font-size: 12px
+            margin-top: 32px
+            margin-bottom: 0
+        &_pagination
+            margin-top: 111px
+            padding: 0
+            li
+                display: inline
+            li:not(:last-child)
+                padding-right: 9px
+            &_item
+                display: block
+                width: 6px
+                height: 6px
+                background-color: rgb(176, 232, 230)
+                border-radius: 50%
+                &_active
+                    width: 10px
+                    height: 10px
+                    background-color: #fff
+
+
+
+
+
+
+
+
                 
 
 
