finished styling logos block

--- a/index.css
+++ b/index.css
@@ -296,5 +296,9 @@ body {
   height: 10px;
   background-color: #fff;
 }
+.custom_logos {
+  padding-top: 67px;
+  padding-bottom: 67px;
+}
 
 /*# sourceMappingURL=index.css.map */
