--- a/sass.sass
+++ b/sass.sass
@@ -239,6 +239,9 @@ body
                     width: 10px
                     height: 10px
                     background-color: #fff
+    &_logos
+        padding-top: 67px
+        padding-bottom: 67px
 
 
 
