finished styling form block

--- a/sass.sass
+++ b/sass.sass
@@ -242,6 +242,42 @@ body
     &_logos
         padding-top: 67px
         padding-bottom: 67px
+    &_form
+        background-color: #f5f5f5
+        p
+            margin: 0
+        h2
+            padding: 0
+            margin: 0
+            margin-bottom: 44px
+            line-height: 7.1px
+        div>input:last-child
+            margin-left: 30px
+        input, textarea
+            border-style: none
+            padding: 12px 14px
+            width: 320px
+            margin-bottom: 30px
+        ::placeholder
+            font-family: 'Nunito Sans', sans-serif
+            font-size: 15px
+        input:not(div>input)
+            width: 100%
+        &_content
+            padding-top: 110px
+            padding-bottom: 100px
+            form
+                margin-top: 41px
+                width: 670px
+                button
+                    margin: 0
+                textarea
+                    resize: none
+                    width: 100%
+                    height: 170px 
+
+
+                
 
 
 
