--- a/index.css
+++ b/index.css
@@ -300,5 +300,49 @@ body {
   padding-top: 67px;
   padding-bottom: 67px;
 }
+.custom_form {
+  background-color: #f5f5f5;
+}
+.custom_form p {
+  margin: 0;
+}
+.custom_form h2 {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 44px;
+  line-height: 7.1px;
+}
+.custom_form div > input:last-child {
+  margin-left: 30px;
+}
+.custom_form input, .custom_form textarea {
+  border-style: none;
+  padding: 12px 14px;
+  width: 320px;
+  margin-bottom: 30px;
+}
+.custom_form ::placeholder {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 15px;
+}
+.custom_form input:not(div > input) {
+  width: 100%;
+}
+.custom_form_content {
+  padding-top: 110px;
+  padding-bottom: 100px;
+}
+.custom_form_content form {
+  margin-top: 41px;
+  width: 670px;
+}
+.custom_form_content form button {
+  margin: 0;
+}
+.custom_form_content form textarea {
+  resize: none;
+  width: 100%;
+  height: 170px;
+}
 
 /*# sourceMappingURL=index.css.map */
