--- a/index.css
+++ b/index.css
@@ -344,5 +344,39 @@ body {
   width: 100%;
   height: 170px;
 }
+.custom_footer {
+  background-color: black;
+  padding: 104px 0px;
+}
+.custom_footer_lists {
+  color: #bcbcbc;
+}
+.custom_footer_lists ul:nth-child(2) {
+  margin-left: 70px;
+}
+.custom_footer_lists ul:nth-child(3) {
+  margin-right: -170px;
+}
+.custom_footer_lists ul:nth-child(5) {
+  margin-left: -90px;
+}
+.custom_footer_lists ul {
+  padding: 0;
+  margin: 0;
+}
+.custom_footer_lists a {
+  color: #bcbcbc;
+  text-decoration: none;
+}
+.custom_footer_lists h6 {
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+}
+.custom_footer_lists li {
+  font-size: 15px;
+  list-style-type: none;
+  font-family: "Nunito Sans", sans-serif;
+}
 
 /*# sourceMappingURL=index.css.map */
