--- a/sass.sass
+++ b/sass.sass
@@ -275,6 +275,33 @@ body
                     resize: none
                     width: 100%
                     height: 170px 
+    &_footer
+        background-color: black
+        padding: 104px 0px
+        &_lists
+            color: #bcbcbc
+            ul:nth-child(2)
+                margin-left: 70px
+            ul:nth-child(3)
+                margin-right: -170px
+            ul:nth-child(5)
+                margin-left: -90px
+            ul
+                padding: 0
+                margin: 0
+            a
+                color: #bcbcbc
+                text-decoration: none
+
+            h6
+                color:#fff
+                font-family: 'Montserrat', sans-serif
+                font-size: 18px
+            li
+                font-size: 15px
+                list-style-type: none
+                font-family: 'Nunito Sans', sans-serif
+
 
 
                 
