finished about page

--- a/index.css
+++ b/index.css
@@ -450,4 +450,76 @@ body {
   background-color: #838383;
 }
 
+.about {
+  padding-bottom: 37px;
+}
+.about_nav {
+  margin-left: 51px;
+  margin-top: 33px;
+}
+.about_nav .active {
+  color: #1ca8c3;
+}
+.about_nav a {
+  color: black;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  letter-spacing: 0.4px;
+}
+.about_logo {
+  top: 38px;
+  position: absolute;
+  left: 147px;
+}
+.about_main_content {
+  padding: 100px 0px;
+}
+.about_main_content h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 38px;
+  letter-spacing: -1px;
+  margin: 0;
+  margin-bottom: 35px;
+  color: #fff;
+}
+.about_main_content p {
+  letter-spacing: 0.1px;
+  font-family: "Nunito Sans", sans-serif;
+  color: #fff;
+  font-size: 18px;
+  margin: 0;
+}
+.about_header_content {
+  margin-left: 67px;
+  margin-top: 144px;
+  margin-bottom: 140px;
+}
+.about_header_content h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 38px;
+  letter-spacing: -1px;
+}
+.about_header_text {
+  font-family: "Nunito Sans", sans-serif;
+  color: #787878;
+  font-size: 18px;
+  margin-top: 25px;
+  letter-spacing: 0.1px;
+}
+.about_header_text p {
+  margin: 0;
+}
+
+.bg-darkgray {
+  background-color: #3e3e3e;
+}
+
+.bg-graylside {
+  background-color: #e1e1e1;
+}
+
+.bg-grayrside {
+  background-color: #f5f5f5;
+}
+
 /*# sourceMappingURL=index.css.map */
