--- a/sass.sass
+++ b/sass.sass
@@ -357,8 +357,64 @@ body
                 background-color: #dddddd
             div:nth-child(odd)
                 background-color: #838383
-
-                
+// about page styles
+.about
+    padding-bottom: 37px
+    &_nav
+        margin-left: 51px
+        margin-top: 33px
+        .active
+            color: #1ca8c3
+        a
+            color: black
+            font-family: 'Montserrat', sans-serif
+            font-size: 12px
+            letter-spacing: 0.4px
+    &_logo
+        top: 38px
+        position: absolute
+        left: 147px
+    &_main
+        &_content
+            padding: 100px 0px
+            h1
+                font-family: 'Montserrat', sans-serif
+                font-size: 38px
+                letter-spacing: -1px
+                margin: 0
+                margin-bottom: 35px
+                color: #fff
+            p
+                letter-spacing: 0.1px
+                font-family: 'Nunito Sans', sans-serif
+                color: #fff
+                font-size: 18px
+                margin: 0
+    &_header
+        &_content
+            margin-left: 67px
+            margin-top: 144px
+            margin-bottom: 140px
+            h1
+                font-family: 'Montserrat', sans-serif
+                font-size: 38px
+                letter-spacing: -1px
+        &_text
+            font-family: 'Nunito Sans', sans-serif
+            color: #787878
+            font-size: 18px
+            margin-top: 25px
+            // margin-left: 5px
+            letter-spacing: 0.1px
+            p
+                margin: 0
+    
+.bg-darkgray
+    background-color: #3e3e3e
+.bg-graylside
+    background-color: #e1e1e1
+.bg-grayrside
+    background-color: #f5f5f5
 
 
 
